--- a/index.html
+++ b/index.html
@@ -1,37 +1,51 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title></title>
-		<style type="text/css">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title></title>
+    <style type="text/css">
 			html, body { height: 100%; margin: 0; padding: 0; }
-      		#map { height: 100%; }
-		</style>
-		<link href="css/map.css" type="text/css" rel="stylesheet">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	</head>
-	<body>
+      #map { height: 100%; }
+    </style>
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,700,300&subset=latin-ext,latin' rel='stylesheet' type='text/css'>
+    <link href="css/map.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  </head>
+  <body>
 
-		<div id="map"></div>
+    <div id="map"></div>
 
-		<div class="search-bar">
-			<input class="search-area" data-bind="value:neighborhood">
-		</div>
+    <div class="search-bar">
+      <select class="search-area neighborhood-selector" data-bind="options: availableNeighborhoods, value: neighborhood, event: { change: changeNeighborhood }"></select>
+      <input class="search-area places-filter" data-bind="value: filterInput">
+      <button class="search-button" data-bind="event: { click: processNewNeighborhood }"><span class="fa fa-forward"></span></button>
+    </div>
 
-		<div class="places" data-bind="foreach: interestingPlaces">
-			<div style="background-color:white; margin-left:10px; margin-right:10px; margin-bottom:10px;">
-				<div data-bind="text: name"></div>
-				<div data-bind="text: rating"></div>
-				<hr>
-			</div>
-		</div>
+    <div class="places-container">
+      <h2 class="places-header">Places</h2>
 
-		<script src="bower_components/knockout/dist/knockout.js"></script>
-		<script src="bower_components/jquery/dist/jquery.min.js"></script>
-		<script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
-		<script src="js/location.js"></script>
-		<script src="js/app.js"></script>
+      <div class="places" data-bind="foreach: interestingPlaces">
+        <div class="place-item">
+          <h3 data-bind="text: name"></h3>
+          <div style="font-family: 'Lato', sans-serif;">
+            <span style="font-weight:700;">Address: </span>
+            <span style="font-weight:300;" data-bind="text: address"></span>
+          </div>
+          <div style="font-family: 'Lato', sans-serif;">
+            <span style="font-weight:700;">Rating: </span>
+            <span style="font-weight:300;" data-bind="text: rating"></span>
+          </div>
+          <hr>
+        </div>
+      </div>
+    </div>
+
+    <script src="bower_components/knockout/dist/knockout.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
+    <script src="js/location.js"></script>
+    <script src="js/app.js"></script>
     </script>
-	</body>
+  </body>
 </html>
