--- a/index.html
+++ b/index.html
@@ -1,33 +1,38 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+
+<head>
 
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
     <title>Neighborhood Map</title>
+
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/simple-sidebar.css" rel="stylesheet">
 
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:400,700,300&subset=latin-ext,latin'>
     <link rel="stylesheet" href="css/map.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-  </head>
-  <body>
-    <div id="map"></div>
+</head>
 
-    <div class="search-bar">
-      <select class="search-area neighborhood-selector" data-bind="options: availableNeighborhoods, value: neighborhood, event: { change: changeNeighborhood }"></select>
-      <input class="search-area places-filter" data-bind="value: filterInput">
-      <button class="search-button" data-bind="event: { click: processNewNeighborhood }">
-        <span class="fa fa-forward"></span>
-      </button>
-    </div>
+<body>
 
-    <div class="places-container">
-      <h2 class="places-header bold-header">Places</h2>
-
-      <div class="places" data-bind="foreach: interestingPlaces">
-        <div class="place-item" data-bind="event: { click: openAssociatedInfoWindow }">
+  <div id="wrapper">
+    <div id="sidebar-wrapper">
+      <ul class="sidebar-nav" data-bind="foreach: interestingPlaces">
+        <!-- ko if: $index() == 0 -->
+        <li class="sidebar-brand places-container" style="width:100%;">
+          <h2 class="places-header bold-header" style="width:100%;">
+            Places
+          </h2>
+        </li>
+        <!-- /ko -->
+        <!-- ko if: $index() != 0 -->
+        <li class="place-item" data-bind="event: { click: openAssociatedInfoWindow }">
           <h3 class="bold-header" data-bind="text: name"></h3>
 
           <div>
@@ -39,16 +44,44 @@
             <span class="bold-header">Rating: </span>
             <span class="text" data-bind="text: rating"></span>
           </div>
-
           <hr>
+        </li>
+        <!-- /ko -->
+      </ul>
+    </div>
+
+
+
+    <div id="page-content-wrapper">
+      <div class="container-fluid">
+        <div class="row">
+          <div id="map" style="width:100%; height:100%;"></div>
+
+          <div class="search-bar">
+            <a href="#menu-toggle" class="btn btn-default fa fa-bars" id="menu-toggle"></a>
+            <select class="search-area neighborhood-selector" data-bind="options: availableNeighborhoods, value: neighborhood, event: { change: changeNeighborhood }"></select>
+            <input class="search-area places-filter" data-bind="value: filterInput">
+            <button class="search-button" data-bind="event: { click: processNewNeighborhood }">
+              <span class="fa fa-forward"></span>
+            </button>
+          </div>
         </div>
       </div>
     </div>
 
-    <script src="bower_components/knockout/dist/knockout.js"></script>
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
-    <script src="js/location.js"></script>
-    <script src="js/app.js"></script>
-  </body>
+    <p class="error-message" data-bind="visible:errorsHappened">Sorry, service is unavailable now. Try again later</p>
+
+
+  </div>
+
+  <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="bower_components/knockout/dist/knockout.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+
+  <script src="js/location.js"></script>
+  <script src="js/app.js"></script>
+  <script src="http://maps.googleapis.com/maps/api/js?libraries=places&callback=viewModel.initMap" async defer></script>
+
+</body>
+
 </html>
