Added google api key

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
   <script src="js/location.js"></script>
   <script src="js/app.js"></script>
-  <script src="http://maps.googleapis.com/maps/api/js?libraries=places&callback=viewModel.initMap" async defer></script>
+  <script src="http://maps.googleapis.com/maps/api/js?libraries=places&callback=viewModel.initMap&key=AIzaSyB-R-S9lfRFAqzavAZqrTrsMO4Rj69Bh4o" async defer></script>
 
 </body>
 
